Melhorando o código de filtragem dos dispositivos externos válidos.